# klog

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
include/: console_sink.hpp  file_sink.hpp  klog.hpp  klog_base.hpp  log_sink.hpp
samples/: logger.cpp
